--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -99,7 +99,7 @@
     </ul>
 
 
-    <p>"Beginnings come before origins." </p><p>&mdash;Denis Hollier</p>
+    <p>"I will never be able to live in peace with the automaton, because I was formatted in the old world. </p><p>&mdash;Bifo Berardi</p>
     <p>Daniel: "When do I learn how to punch?"</p>
     <p>Miyagi: "Better learn balance. Balance is key. Balance good, karate good. Everything good. Balance bad, better pack up, go home. Understand?" </p>
 
