--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -27,25 +27,25 @@
     <hr />
 
     <div class="container">
-      <p class="header"><a href="">bio (current):</a></p>
+      <p class="header"><a href="">present:</a></p>
       <div class="content">
-        <p>Troy Conrad Therrien (b. 1981): Initially trained in computer engineering and commerce, and later in architecture design, history, and theory, his work since has combined these three fields. He is currently Curator of Architecture and Digital Initiatives at the <a href="https://www.guggenheim.org/" target="_blank">Guggenheim Museum</a> where he organized the museum’s first ever online exhibition, <em><a href="http://azone.guggenheim.org/" target="_blank">Åzone Futures Market</a><em>, and is currently working on forthcoming exhibitions of architecture, art, and technology in New York and Bilbao. He is Adjunct Professor of Architecture at the <a href="https://www.arch.columbia.edu" target="_blank">Columbia University Graduate School of Architecture, Planning and Preservation</a> where he teaches seminars on the consequences of contemporary techno-culture on architecture and its deep history and immediate future. He is currently a member of the United Nations Global Network on Digital Technologies for Sustainable Urbanization (iTSUN), and regularly publishes, serves on awards juries, and speaks internationally.</p>
+        <p>Initially trained in computer engineering and commerce, and later in architecture design, history, and theory, my work combines these three fields. I am currently Curator of Architecture and Digital Initiatives at the <a href="https://www.guggenheim.org/" target="_blank">Guggenheim Museum</a> where I organized the museum’s first ever online exhibition, <em><a href="http://azone.guggenheim.org/" target="_blank">Åzone Futures Market</a><em>, and am currently working on forthcoming exhibitions of architecture, art, and technology in New York and Bilbao. I am also an Adjunct Professor of Architecture at the <a href="https://www.arch.columbia.edu" target="_blank">Columbia University Graduate School of Architecture, Planning and Preservation</a> where I teach seminars on the consequences of contemporary techno-culture on architecture and its deep history and immediate future. I am a member of the United Nations Global Network on Digital Technologies for Sustainable Urbanization (iTSUN), and regularly publish, serve on awards juries, and speak internationally.</p>
       </div>
     </div>
 
     <hr class="small" />
 
     <div class="container">
-      <p class="header"><a href="">bio (past):</a></p>
+      <p class="header"><a href="">past:</a></p>
       <div class="content">
-        <p>He has been a hired gun for <a href="http://www.brucemaudesign.com/" target="_blank">Bruce Mau Design</a>; a trend forecaster for <a href="https://www.audi.de/de/brand/de.html" target="_blank">Audi</a>; an architectural designer in <a href="http://edouardfrancois.com/" target="_blank">Paris</a>, New York, and <a href="http://www.ijpcorporation.com/" target="_blank">London</a>; a computational mathematics researcher at a <a href="http://hct.ece.ubc.ca/" target="_blank">Human Computer Interaction Lab</a>; an editor of the <a href="http://www.arpajournal.net/" target="_blank">Advanced Research Practices in Architecture Journal</a>; co-founder of the Architecture Online Lab, director of The Energy Issue initiative, and co-curator the <a href="http://experimentsinmotion.com/" target="_blank">Experiments in Motion</a> initiative at Columbia; and co-founder of Therrien–Barley (now <a href="http://consortia.net/" target="_blank">Consortia</a>), an innovation and design agency servicing Fortune 500 design and technology companies. He received an MA in Architecture History and Theory from the <a href="http://www.aaschool.ac.uk/" target="_blank">Architectural Association</a> in London, an MArch from <a href="https://www.arch.columbia.edu" target="_blank">Columbia University</a>, where he received the American Institute of Architects Medal, and a BASc in Computer Engineering from the <a href="https://www.ubc.ca/" target="_blank">University of British Columbia</a>.</p>
+        <p>I have been a hired gun for <a href="http://www.brucemaudesign.com/" target="_blank">Bruce Mau Design</a>; a trend forecaster for <a href="https://www.audi.de/de/brand/de.html" target="_blank">Audi</a>; an architectural designer in <a href="http://edouardfrancois.com/" target="_blank">Paris</a>, New York, and <a href="http://www.ijpcorporation.com/" target="_blank">London</a>; a computational mathematics researcher at a <a href="http://hct.ece.ubc.ca/" target="_blank">Human Computer Interaction Lab</a>; an editor of the <a href="http://www.arpajournal.net/" target="_blank">Advanced Research Practices in Architecture Journal</a>; a co-founder of the Architecture Online Lab, director of The Energy Issue initiative, and co-curator the <a href="http://experimentsinmotion.com/" target="_blank">Experiments in Motion</a> initiative at Columbia; and was co-founder of Therrien–Barley (now <a href="http://consortia.net/" target="_blank">Consortia</a>), an innovation and design agency servicing Fortune 500 design and technology companies. I received an MA in Architecture History and Theory from the <a href="http://www.aaschool.ac.uk/" target="_blank">Architectural Association</a> in London, an MArch from <a href="https://www.arch.columbia.edu" target="_blank">Columbia University</a> (American Institute of Architects Medal), and a BASc in Computer Engineering from the <a href="https://www.ubc.ca/" target="_blank">University of British Columbia</a>.</p>
       </div>
     </div>
 
     <hr class="small" />
 
     <div class="container">
-      <p class="header"><a href="">key terms:</a></p>
+      <p class="header"><a href="">cosmology:</a></p>
       <div class="content">
         {{ content }}
       </div>
@@ -93,7 +93,7 @@
         <a href="https://onename.com/{{ site.onename }}" target="_blank">@{{ site.onename }}</a>
       </li>
       <li>
-        <strong>Curriculum Vitae:</strong>
+        <strong>curriculum vitae:</strong>
         <a href="https://drive.google.com/open?id=0B9TSh9uOIaD3NlFHanZaMU8tcGs" target="_blank">PDF 	&#128279;</a>
       </li>
     </ul>
