--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -65,6 +65,10 @@
           tctherrien(at)<a href="mailto:tctherrien@guggenheim.org">guggenheim.org</a>, tct2003(at)<a href="mailto:tct2003@columbia.edu">columbia.edu</a>
       </li>
       <li>
+        <strong>are.na:</strong>
+          <a href="https://www.are.na/{{ site.arena }}" target="_blank">{{ site.arena }}</a>
+      </li>
+      <li>
         <strong>github:</strong>
           <a href="https://github.com/{{ site.github }}" target="_blank">@{{ site.github }}</a>
       </li>
