--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -98,7 +98,7 @@
       </li>
       <li>
         <strong>curriculum vitae:</strong>
-        <a href="https://drive.google.com/open?id=0B9TSh9uOIaD3NlFHanZaMU8tcGs" target="_blank">PDF 	&#128279;</a>
+        <a href="https://drive.google.com/open?id=0B9TSh9uOIaD3NlFHanZaMU8tcGs" target="_blank">&#128196;</a>
       </li>
     </ul>
 
