link to self from TCT

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -20,7 +20,7 @@
 
   <body>
   <article>
-    <h1>Troy Conrad Therrien: curator of architecture and digital initiatives <a href="https://twitter.com/guggenheim" target="_blank">@Guggenheim</a>; adjunct professor of architecture <a href="https://twitter.com/columbiagsapp" target="_blank">@ColumbiaGSAPP</a></h1>
+    <h1><a href="{{ site.baseurl }}" target="_self">Troy Conrad Therrien</a>: curator of architecture and digital initiatives <a href="https://twitter.com/guggenheim" target="_blank">@Guggenheim</a>; adjunct professor of architecture <a href="https://twitter.com/columbiagsapp" target="_blank">@ColumbiaGSAPP</a></h1>
 
     <p>v{{ site.v }}</p>
 
