add arena embed

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -45,9 +45,20 @@
     <hr class="small" />
 
     <div class="container">
-      <p class="header"><a href="">cosmology:</a></p>
+      <p class="header"><a href="">glossary:</a></p>
       <div class="content">
         {{ content }}
+      </div>
+    </div>
+
+    <hr class="small" />
+
+  
+
+    <div class="container">
+      <p class="header"><a href="">live research:</a></p>
+      <div class="content">
+        <iframe class="blog__arena" src="https://www.are.na/architecture-effects/deep-history-1496432881/embed"></iframe>
       </div>
     </div>
 
