--- a/style.scss
+++ b/style.scss
@@ -142,6 +142,11 @@ li:last-of-type {
   border-bottom: 1px solid;
 }
 
+.arena_embed{
+	width: 100%;
+  height: 700px;
+}
+
 @media screen and (max-width: 768px) {
   body {
     margin: 1.6rem;
