--- a/style.scss
+++ b/style.scss
@@ -143,8 +143,11 @@ li:last-of-type {
 }
 
 .arena_embed{
-	width: 100%;
-  height: 700px;
+	border: 1px solid #000000;
+  margin: 0 auto;
+  width: 100%;
+  max-width: 100%;
+  height: 800px;
 }
 
 @media screen and (max-width: 768px) {
