add idea space map

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -53,12 +53,19 @@
 
     <hr class="small" />
 
-  
+    <div class="container">
+      <p class="header"><a href="">idea space:</a></p>
+      <div class="content">
+        <img src="../images/TheNewCulture.png"/>
+      </div>
+    </div>
+
+    <hr class="small" />
 
     <div class="container">
       <p class="header"><a href="">live research:</a></p>
       <div class="content">
-        <iframe class="blog__arena" src="https://www.are.na/architecture-effects/deep-history-1496432881/embed"></iframe>
+        <iframe class="arena_embed" src="https://www.are.na/architecture-effects/deep-history-1496432881/embed"></iframe>
       </div>
     </div>
 
