--- a/style.scss
+++ b/style.scss
@@ -144,7 +144,7 @@ li:last-of-type {
 
 .arena_embed{
 	border: 1px solid #000000;
-  margin: 0 auto;
+  margin: 10px 0 auto;
   width: 100%;
   max-width: 100%;
   height: 800px;
