--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -45,7 +45,7 @@
     <hr class="small" />
 
     <div class="container">
-      <p class="header"><a href="">glossary:</a></p>
+      <p class="header"><a href="">idea space:</a></p>
       <div class="content">
         {{ content }}
       </div>
@@ -54,7 +54,7 @@
     <hr class="small" />
 
     <div class="container">
-      <p class="header"><a href="">idea space:</a></p>
+      <p class="header"><a href="">live research:</a></p>
       <div class="content">
         <iframe class="arena_embed" src="https://www.are.na/architecture-effects/deep-history-1496432881/embed"></iframe>
       </div>
