--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -38,14 +38,23 @@
     <div class="container">
       <p class="header"><a href="">past:</a></p>
       <div class="content">
-        <p>I have been a hired gun for <a href="http://www.brucemaudesign.com/" target="_blank">Bruce Mau Design</a>; a trend forecaster for <a href="https://www.audi.de/de/brand/de.html" target="_blank">Audi</a>; an architectural designer in <a href="http://edouardfrancois.com/" target="_blank">Paris</a>, New York, and <a href="http://www.ijpcorporation.com/" target="_blank">London</a>; a computational mathematics researcher at a <a href="http://hct.ece.ubc.ca/" target="_blank">Human Computer Interaction Lab</a>; an editor of the <a href="http://www.arpajournal.net/" target="_blank">Advanced Research Practices in Architecture Journal</a>; a co-founder of the Architecture Online Lab, director of The Energy Issue initiative, and co-curator the <a href="http://experimentsinmotion.com/" target="_blank">Experiments in Motion</a> initiative at Columbia; and was co-founder of Therrien–Barley (now <a href="http://consortia.net/" target="_blank">Consortia</a>), an innovation and design agency servicing Fortune 500 design and technology companies. I received an MA in Architecture History and Theory from the <a href="http://www.aaschool.ac.uk/" target="_blank">Architectural Association</a> in London, an MArch from <a href="https://www.arch.columbia.edu" target="_blank">Columbia University</a> (American Institute of Architects Medal), and a BASc in Computer Engineering from the <a href="https://www.ubc.ca/" target="_blank">University of British Columbia</a>.</p>
+        <p>I have been a creative technologist for <a href="http://www.brucemaudesign.com/" target="_blank">Bruce Mau Design</a>; a trend forecaster for <a href="https://www.audi.de/de/brand/de.html" target="_blank">Audi</a>; an architectural designer in <a href="http://edouardfrancois.com/" target="_blank">Paris</a>, New York, and <a href="http://www.ijpcorporation.com/" target="_blank">London</a>; a computational mathematics researcher at a <a href="http://hct.ece.ubc.ca/" target="_blank">Human Computer Interaction Lab</a>; an editor of the <a href="http://www.arpajournal.net/" target="_blank">Advanced Research Practices in Architecture Journal</a>; a co-founder of the Architecture Online Lab, director of The Energy Issue initiative, and co-curator the <a href="http://experimentsinmotion.com/" target="_blank">Experiments in Motion</a> initiative at Columbia; and was co-founder of Therrien–Barley (now <a href="http://consortia.net/" target="_blank">Consortia</a>), an innovation and design agency servicing Fortune 500 design and technology companies. I received an MA in Architecture History and Theory from the <a href="http://www.aaschool.ac.uk/" target="_blank">Architectural Association</a> in London, an MArch from <a href="https://www.arch.columbia.edu" target="_blank">Columbia University</a> (American Institute of Architects Medal), and a BASc in Computer Engineering from the <a href="https://www.ubc.ca/" target="_blank">University of British Columbia</a>.</p>
       </div>
     </div>
 
     <hr class="small" />
 
     <div class="container">
-      <p class="header"><a href="">idea space:</a></p>
+      <p class="header"><a href="">texts:</a></p>
+      <div class="content">
+        {{ site.texts }}
+      </div>
+    </div>
+
+    <hr class="small" />
+
+    <div class="container">
+      <p class="header"><a href="">teaching:</a></p>
       <div class="content">
         {{ content }}
       </div>
