--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -47,6 +47,7 @@
     <div class="container">
       <p class="header"><a href="">texts:</a></p>
       <div class="content">
+        test
         {{ site.texts }}
       </div>
     </div>
