--- a/_layouts/texts.html
+++ b/_layouts/texts.html
@@ -1,7 +1,11 @@
 ---
-layout: default
+layout: page
 title: texts
 ---
 
-
-  <p>{{ page.title }}: {{ content }}</p>
+  {% for text in site.texts %}
+    <div class="text">
+      <h2>{{ text.title }}</h2>
+      {{ text.content }}
+    </div>
+  {% endfor %}
