--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -49,7 +49,7 @@
       <div class="content">
         {% for text in site.texts %}
         	<div class="text">
-        		<h2><a href="{{ text.url }}">{{ text.title }}</a></h2>
+        		<h2>{{ text.content }}</h2>
         	</div>
         {% endfor %}
       </div>
