div wrapper on text

--- a/style.scss
+++ b/style.scss
@@ -150,6 +150,10 @@ li:last-of-type {
   height: 800px;
 }
 
+.text{
+	margin-bottom: 2em;
+}
+
 @media screen and (max-width: 768px) {
   body {
     margin: 1.6rem;
