--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -48,10 +48,12 @@
       <p class="header"><a href="">texts:</a></p>
       <div class="content">
         {% for text in site.texts %}
-          <p>{% if text.type == "essay" %}“{% endif %}{{ text.title}}{% if text.type == "essay" %}”{% endif %} (<em>{% if text.pub_link != null %}<a href="{{ text.pub_link}}" targt="_blank">{{ text.pub }}</a>{% else %}{{ text.pub }}{% endif %}</em>, {{ text.timing }})</p>
-          <div class="blurb">
-            {{ text.content }}
-          </div>
+          <div class="text">
+            <p>{% if text.type == "essay" %}“{% endif %}{{ text.title }}{% if text.type == "essay" %}”{% endif %} (<em>{% if text.pub_link != null %}<a href="{{ text.pub_link}}" targt="_blank">{{ text.pub }}</a>{% else %}{{ text.pub }}{% endif %}</em>, {{ text.timing }})</p>
+            <div class="blurb">
+              {{ text.content }}
+            </div>
+          </div><!-- /.text -->
         {% endfor %}
       </div>
     </div>
