--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -49,7 +49,9 @@
       <div class="content">
         {% for text in site.texts %}
           <div class="text">
-            <p>{{ text.title }} (<em>{% if text.pub_link != null %}<a href="{{ text.pub_link}}" targt="_blank">{{ text.pub }}</a>{% else %}{{ text.pub }}{% endif %}</em>, {{ text.timing }})</p>
+            <p>
+              {{ text.title }}
+            </p>
             <div class="blurb">
               {{ text.content }}
             </div>
