--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -50,7 +50,17 @@
         {% for text in site.texts %}
           <div class="text">
             <p>
-              {{ text.title }}
+              <span>{% if text.type == "essay" %}“{% endif %}{{ text.title }}{% if text.type == "essay" %}”{% endif %}</span>
+              (
+                <em>
+                  {% if text.pub_link != null %}<a href="{{ text.pub_link}}" targt="_blank">{% endif %}
+                  {{ text.pub }}
+                  {% if text.pub_link != null %}</a>{% endif %}
+                  {{ text.pub }}
+                  {% if text.pub_sub != null %}:{{ text.pub_sub }}{% endif %}
+                </em>
+                <span>, {{ text.timing }}</span>
+              )
             </p>
             <div class="blurb">
               {{ text.content }}
