--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -45,7 +45,7 @@
     <hr class="small" />
 
     <div class="container">
-      <p class="header"><a href="">texts:</a></p>
+      <p class="header"><a href="">key texts:</a></p>
       <div class="content">
         {% for text in site.texts %}
           <div class="text">
