--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -52,7 +52,7 @@
             <p>{% if text.type == "essay" %}“{% endif %}{{ text.title }}{% if text.type == "essay" %}”{% endif %}</p>
             <div class="blurb">
               {{ text.content }}
-              (<em>{% if text.pub_link != null %}<a href="{{ text.pub_link}}" targt="_blank">{% endif %}{{ text.pub }}{% if text.pub_link != null %}</a>{% endif %}{% if text.pub_sub != null %}:{{ text.pub_sub }}{% endif %}</em>, {{ text.timing }})
+              <p>&mdash;<em>{% if text.pub_link != null %}<a href="{{ text.pub_link}}" targt="_blank">{% endif %}{{ text.pub }}{% if text.pub_link != null %}</a>{% endif %}{% if text.pub_sub != null %}:{{ text.pub_sub }}{% endif %}</em>, {{ text.timing }}</p>
             </div>
           </div><!-- /.text -->
         {% endfor %}
