--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -20,7 +20,7 @@
 
   <body>
   <article>
-    <h1><a href="{{ site.baseurl }}" target="_self">Troy Conrad Therrien</a> ∞🐬: Curator, Architecture and Digital Initiatives <a href="https://twitter.com/guggenheim" target="_blank">@Guggenheim</a>; faculty <a href="https://twitter.com/columbiagsapp" target="_blank">@ColumbiaGSAPP</a> and <a href="https://twitter.com/AASchool" target="_blank">@AASchool</a>; citizen <a href="https://twitter.com/MetisNationBC" target="_blank">@MetisNationBC</a>.</h1>
+    <h1><a href="{{ site.baseurl }}" target="_self">Troy Conrad Therrien</a> ∞ Curator, Architecture and Digital Initiatives <a href="https://twitter.com/guggenheim" target="_blank">@Guggenheim</a>; faculty <a href="https://twitter.com/columbiagsapp" target="_blank">@ColumbiaGSAPP</a> and <a href="https://twitter.com/AASchool" target="_blank">@AASchool</a>; citizen <a href="https://twitter.com/MetisNationBC" target="_blank">@MetisNationBC</a>.</h1>
 
     <p>v{{ site.v }}</p>
 
